add mongo database

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/yuliantocode93/mern-authentication#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.3"
   }
 }
